# corners

./: CMakeLists.txt
include/: app.h  chip.h  element.h  field.h
src/: app.cpp  chip.cpp  field.cpp  main.cpp
